--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,9 +2,10 @@ before_script:
   - python3 -m venv venv
   - venv/bin/pip install tox flake8
   - . venv/bin/activate
+  - pwd
 
 pytest_gfix_unit_tests:
   tags:
     - qa-mac-mini
   script:
-    - tox
+    - tox tests/test_gfix.py
