adds a runner tag in order to execute the tests in CI

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ envlist = py37
 deps =
     pytest>=3.0
     mock>=2.0.0
-commands = pytest {posargs:tests}
+commands = pytest --basetemp={envtmpdir} {posargs}
 
 [testenv:flake8]
 skip_install = true
