sets the testenv PYTHONPATH for tox

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,8 @@ envlist = py37
 deps =
     pytest>=3.0
     mock>=2.0.0
+setenv =
+    PYTHONPATH = {env:PYTHONPATH}{:}{toxinidir}
 commands = pytest --basetemp={envtmpdir} {posargs}
 
 [testenv:flake8]
