sets the testenv PYTHONPATH for tox

--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,9 @@ deps =
     pytest>=3.0
     mock>=2.0.0
 setenv =
-    PYTHONPATH = {env:PYTHONPATH}{:}{toxinidir}
-commands = pytest --basetemp={envtmpdir} {posargs}
+    PYTHONPATH = .
+commands =
+    pytest --basetemp={envtmpdir} {posargs}
 
 [testenv:flake8]
 skip_install = true
