--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,17 @@
+#!ini
+# FILE: tox.ini
 # For more information about tox, see https://tox.readthedocs.io/en/latest/
 [tox]
 # envlist = py27,py34,py35,py36,py37,pypy,flake8
-envlist = py37
+envlist = py37, flake8
 
 [testenv]
 deps =
     pytest>=3.0
     mock>=2.0.0
-setenv =
-    PYTHONPATH = .
+changedir = {toxworkdir}/{envname}
 commands =
-    pytest --basetemp={envtmpdir} {posargs}
+     pytest {toxinidir}/tests
 
 [testenv:flake8]
 skip_install = true
