sets up the gitlab yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,10 +7,8 @@ cache:
 before_script:
   - pip install tox
 
-static_analysis:
-  script:
-   - tox -e static_analysis
-
 tests:
+  tags:
+    - qa-mac-mini
   script:
    - tox -e tests
