adds confcutdir to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,10 @@ deps =
     pytest>=3.0
     mock>=2.0.0
 changedir = {toxworkdir}/{envname}
+confcutdir = {toxworkdir}
 commands =
      pytest {toxinidir}/tests
+
 
 [testenv:flake8]
 skip_install = true
