--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,20 @@
 #!ini
 # FILE: tox.ini
 # For more information about tox, see https://tox.readthedocs.io/en/latest/
+
 [tox]
-# envlist = py27,py34,py35,py36,py37,pypy,flake8
+toxworkdir = {toxinidir}/.tox
 envlist = py37, flake8
 
+
 [testenv]
-deps =
-    pytest>=3.0
-    mock>=2.0.0
-changedir = {toxworkdir}/{envname}
+deps = pytest>=3.0
 confcutdir = {toxworkdir}
-commands =
-     pytest {toxinidir}/tests
+commands = pytest tests
+
+
+[flake8]
+max-line-length = 180
 
 
 [testenv:flake8]
