adapts gitlab-ci.yml and tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -8,9 +8,10 @@ envlist = py37, flake8
 
 
 [testenv]
+
 deps = pytest>=3.0
-confcutdir = tests
-commands = pytest tests
+confcutdir = {toxinidir}/tests
+commands = {toxinidir}/.tox/py37/bin/pytest tests
 
 
 [flake8]
