adapts gitlab-ci.yml and tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ envlist = py37, flake8
 
 deps = pytest>=3.0
 confcutdir = {toxinidir}/tests
-commands = {toxinidir}/.tox/py37/bin/pytest tests
+commands = pytest tests
 
 
 [flake8]
